2.1.16 (2024-03-10)

- Added "merge" icon in context responses (allows merging selected response with the previous response).
- Added display of Llama-index used sources in the context response.
- Fixed word-wrap in code blocks - issue #27.
- Improved audio playback status indication for responses.

2.1.15 (2024-03-09)

- Added Edit mode in chat output with options: read response (audio), copy to clipboard, regenerate response, edit and regenerate, and delete context item.
- Added dynamic max output tokens calculation in completion mode - issue #28.
- Added config option "Modes to auto-index" in Llama-index settings.
- Fixed typo in gpt-4-turbo-preview model config args for Llama-index provider - issue #29.

2.1.14 (2024-03-09)

- Added restoration of "All counters" checkbox status in calendar on tab init.
- Added new line with Shift+Enter in input if sending mode is "Enter" - issue #26.

2.1.13 (2024-03-08)

- Fixed context auto-indexing in autonomous/agent mode - issue #23.
- Added AzureOpenAI provider for Llama.
- Added configuration option for the model in query file/web options in plugins.
- Added removal of temporary index from memory after use.

2.1.12 (2024-03-08)

- Added config option for max requests per minute (RPM) in "Settings -> Model" - issue #23.
- Added config for continue prompt in "Settings -> Agent".
- Added config option for custom API endpoint URL in "Settings -> General" - issue #21.
- Added "Allow context item delete" option in "Settings -> Context".
- Added checkbox "All counters" in filters in Calendar view - when disabled, calendar displays filtered record counters instead of all records.
- Improved the reset to default option in "Settings" to persist all non-settings config options.

2.1.11 (2024-03-07)

- Fixed search query if multiple labels selected
- Added prevent from saving empty notes in calendar
- Added display empty dates in DB Viewer if timestamp = 0

2.1.10 (2024-03-06)

- Added "DB Viewer" in Developer menu.